Cleaner DDD practices